etcdkeeper/etcdkeeper.svc.yaml
# https://medium.com/@awkwardferny/getting-started-with-kubernetes-ingress-nginx-on-minikube-d75e58f52b6c

# USAGE: kubectl apply -f etcdkeeper.svc.yaml
# wait a min for the service to be created
# kubectl get svc
apiVersion: v1
kind: Service
metadata:
  name: etcdkeeper-svc
  namespace: etcdkeeper
  labels:
    run: nginx
spec:
  # In a production setup, we recommend accessing Grafana through an external Loadbalancer
  # or through a public IP.
  # type: LoadBalancer
  # You could also use NodePort to expose the service at a randomly-generated port
  # type: NodePort
  # NOTE: How to support multiple ingress using on ingress controller
  # NOTE: How to support multiple ingress using on ingress controller
  # NOTE: How to support multiple ingress using on ingress controller
  # NOTE: How to support multiple ingress using on ingress controller
  # NOTE: How to support multiple ingress using on ingress controller
  # NOTE: How to support multiple ingress using on ingress controller
  # https://github.com/kubernetes/kubernetes/issues/17088#issuecomment-394313647
  # type: ExternalName
  # externalName: etcdkeeper-svc.etcdkeeper.svc.cluster.local
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    # app: etcdkeeper
    run: nginx
